--- a/front/package.json
+++ b/front/package.json
@@ -25,7 +25,8 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.6"
+    "@emotion/babel-plugin": "^11.10.6",
+    "msw": "^1.1.0"
   },
   "msw": {
     "workerDirectory": "public"
