--- a/front/package.json
+++ b/front/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@next/font": "13.1.6",
-    "@reduxjs/toolkit": "^1.9.3",
-    "@types/node": "18.14.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "axios": "^1.3.4",
-    "next": "13.1.6",
-    "next-auth": "^4.20.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
-    "typescript": "4.9.5"
-  },
-  "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.6",
-    "msw": "^1.1.0"
-  },
-  "msw": {
-    "workerDirectory": "public"
-  }
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@next/font": "13.1.6",
+        "@reduxjs/toolkit": "^1.9.3",
+        "@types/node": "18.14.0",
+        "@types/react": "18.0.28",
+        "@types/react-dom": "18.0.11",
+        "axios": "^1.3.4",
+        "next": "13.1.6",
+        "next-auth": "^4.20.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-redux": "^8.0.5",
+        "typescript": "4.9.5"
+    },
+    "devDependencies": {
+        "@emotion/babel-plugin": "^11.10.6"
+    }
 }
